--- a/src/app/modules/developer/Components/booking-list/booking-list.component.css
+++ b/src/app/modules/developer/Components/booking-list/booking-list.component.css
@@ -19,8 +19,8 @@
 } */
 
 /* Tab Navigation Enhancements */
- .nav-link {
-  color:#747579;
+.nav-link {
+  color: #747579;
 }
 
 .nav-tabs .nav-link.active {
@@ -30,7 +30,8 @@
 }
 
 /* Card and Alert Animations */
-.animate-card, .animate-alert {
+.animate-card,
+.animate-alert {
   animation: slideIn 0.6s ease-out;
 }
 
@@ -87,7 +88,7 @@
 /* Card Style Enhancements */
 .card {
   border-radius: 10px;
- 
+
 }
 
 .border-danger {
@@ -95,7 +96,8 @@
 }
 
 .text-danger {}
-.text-end{
+
+.text-end {
   justify-content: right !important;
 }
 
@@ -104,24 +106,27 @@
   background-color: rgb(253, 185, 185);
   color: rgb(146, 26, 26);
 } */
-.bg-light-warning-canceled{
+.bg-light-warning-canceled {
   color: rgb(248, 246, 246);
   background-color: rgb(228, 33, 33);
 }
+
 /* .bg-light-warning-pending{
   background-color: rgb(253, 237, 185);
   color: rgb(146, 92, 26);
 } */
-.bg-light-warning-pending{
+.bg-light-warning-pending {
   color: rgb(253, 253, 250);
   background-color: #ffc107;
 }
-.bg-light-warning-conmleted{
+
+.bg-light-warning-conmleted {
   color: rgb(249, 253, 252);
   --fc-bg-opacity: 1;
---fc-bg-opacity: 1;
+  --fc-bg-opacity: 1;
   background-color: #198754 !important;
 }
+
 .card {
   --bs-card-spacer-y: 1.25rem;
   --bs-card-spacer-x: 1.25rem;
@@ -143,12 +148,12 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   min-width: 0;
-  color:  #747579;
+  color: #747579;
   word-wrap: break-word;
-  background-color:#fff;
+  background-color: #fff;
   background-clip: border-box;
   border: 1px solid #dfdfe3;
   border-radius: 1rem;
@@ -182,27 +187,33 @@
 .border {
   border: 1px solid #dfdfe3 !important;
 }
+
 .border-bottom {
-  border-bottom:  1px solid #dfdfe3 !important;
+  border-bottom: 1px solid #dfdfe3 !important;
 }
+
 .card-header {
   padding: 1.25rem 1.25rem;
   margin-bottom: 0;
   background-color: #fff;
   border-bottom: 1px solid #dfdfe3;
 }
+
 .card-header:first-child {
   border-radius: 1rem 1rem 0 0;
 }
+
 .card-header-title {
   margin-bottom: 0;
 }
+
 .card-body {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  padding:1.25rem 1.25rem;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem 1.25rem;
 }
+
 .nav-tabs {
   --bs-nav-tabs-border-width: 1px;
   --bs-nav-tabs-border-color: #dfdfe3;
@@ -213,6 +224,7 @@
   --bs-nav-tabs-link-active-border-color: #c5c5c7 #c5c5c7 #fff;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
 }
+
 .nav.nav-bottom-line .nav-link {
   background: transparent;
   border: transparent;
@@ -221,26 +233,28 @@
   padding: 0.6rem 0.75rem;
   white-space: nowrap;
 }
+
 .nav.nav-bottom-line .nav-link.active {
   background: transparent;
   color: #5143d9;
   border-bottom: 3px solid #5143d9;
 }
+
 @media (max-width: 991.98px) {
   .nav-responsive {
     overflow-x: scroll;
-        flex-wrap: nowrap;
+    flex-wrap: nowrap;
   }
 }
 
 
-.nav-justified > .nav-link,
+.nav-justified>.nav-link,
 .nav-justified .nav-item {
   -ms-flex-preferred-size: 0;
-      flex-basis: 0;
+  flex-basis: 0;
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: center;
 }
 
@@ -248,6 +262,7 @@
 .nav-justified .nav-item .nav-link {
   width: 100%;
 }
+
 .icon-lg {
   width: 3.5rem;
   height: 3.5rem;
@@ -255,28 +270,34 @@
   text-align: center;
   font-size: 1.2rem;
 }
+
 .flex-shrink-0 {
   -ms-flex-negative: 0 !important;
-      flex-shrink: 0 !important;
+  flex-shrink: 0 !important;
 }
+
 .nav.nav-divider a:not(.dropdown-item) {
   color: inherit;
 }
-.nav.nav-divider .nav-item + .nav-item:before {
+
+.nav.nav-divider .nav-item+.nav-item:before {
   content: "•";
   color: inherit;
   padding-left: 0.65rem;
   padding-right: 0.75rem;
   opacity: 0.8;
 }
+
 .nav.nav-divider .nav-item {
   display: inline-block;
   vertical-align: middle;
 }
+
 .nav.nav-divider .nav-link {
   padding: 0;
   color: inherit;
 }
+
 small,
 .small {
   font-weight: 400 !important;
@@ -291,18 +312,20 @@ small,
   margin-bottom: 0.5rem;
   color: var(--bs-card-title-color);
 }
+
 body {
   margin: 0;
-font-family: "DM Sans", sans-serif ;
+  font-family: "DM Sans", sans-serif;
   font-size: 1rem;
-  font-weight:400;
+  font-weight: 400;
   line-height: 1.5;
-  color:  #747579;
+  color: #747579;
   text-align: var(--bs-body-text-align);
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 hr {
   margin: 1rem 0;
   color: #85878a;
@@ -311,7 +334,18 @@ hr {
   opacity: 0.25;
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
+h1,
+.h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-family: "Poppins", sans-serif;
@@ -320,52 +354,73 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   color: var(--bs-heading-color);
 }
 
-h1, .h1 {
+h1,
+.h1 {
   font-size: calc(1.475rem + 2.7vw);
 }
+
 @media (min-width: 1200px) {
-  h1, .h1 {
+
+  h1,
+  .h1 {
     font-size: 3.5rem;
   }
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-size: calc(1.425rem + 2.1vw);
 }
+
 @media (min-width: 1200px) {
-  h2, .h2 {
+
+  h2,
+  .h2 {
     font-size: 3rem;
   }
 }
 
-h3, .h3 {
+h3,
+.h3 {
   font-size: calc(1.355rem + 1.26vw);
 }
+
 @media (min-width: 1200px) {
-  h3, .h3 {
+
+  h3,
+  .h3 {
     font-size: 2.3rem;
   }
 }
 
-h4, .h4 {
+h4,
+.h4 {
   font-size: calc(1.3rem + 0.6vw);
 }
+
 @media (min-width: 1200px) {
-  h4, .h4 {
+
+  h4,
+  .h4 {
     font-size: 1.75rem;
   }
 }
 
-h5, .h5 {
+h5,
+.h5 {
   font-size: calc(1.255rem + 0.06vw);
 }
+
 @media (min-width: 1200px) {
-  h5, .h5 {
+
+  h5,
+  .h5 {
     font-size: 1.3rem;
   }
 }
 
-h6, .h6 {
+h6,
+.h6 {
   font-size: 1rem;
 }
 
@@ -373,6 +428,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+
 address {
   margin-bottom: 1rem;
   font-style: normal;
@@ -411,18 +467,22 @@ strong {
   font-weight: bolder;
 }
 
-small, .small {
+small,
+.small {
   font-size: 0.875em !important;
 }
+
 a {
   color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
   text-decoration: none;
 }
+
 a:hover {
   --bs-link-color-rgb: var(--bs-link-hover-color-rgb);
 }
 
-a:not([href]):not([class]), a:not([href]):not([class]):hover {
+a:not([href]):not([class]),
+a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
 }
@@ -442,6 +502,7 @@ pre {
   overflow: auto;
   font-size: 0.875em;
 }
+
 pre code {
   font-size: inherit;
   color: inherit;
@@ -453,7 +514,8 @@ code {
   color: var(--bs-code-color);
   word-wrap: break-word;
 }
-a > code {
+
+a>code {
   color: inherit;
 }
 
@@ -464,6 +526,7 @@ kbd {
   background-color: var(--bs-body-color);
   border-radius: 0.4rem;
 }
+
 kbd kbd {
   padding: 0;
   font-size: 1em;
@@ -541,6 +604,7 @@ select {
 select {
   word-wrap: normal;
 }
+
 select:disabled {
   opacity: 1;
 }
@@ -549,16 +613,20 @@ select:disabled {
   color: #5143d9;
   background-color: rgba(81, 67, 217, 0.1);
 }
-.btn-primary-soft:active, .btn-primary-soft:hover, .btn-primary-soft:focus {
+
+.btn-primary-soft:active,
+.btn-primary-soft:hover,
+.btn-primary-soft:focus {
   color: #fff;
   background-color: #5143d9;
   border-color: #5143d9;
 }
+
 .navbar-toggler .navbar-toggler-animation span {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   -webkit-transform: rotateZ(0deg);
-          transform: rotateZ(0deg);
+  transform: rotateZ(0deg);
   height: 2px;
   background: var(--bs-navbar-color);
   display: block;
@@ -566,5 +634,12 @@ select:disabled {
   width: 100%;
   border-radius: 30px;
 }
-
-
+.btn-danger{
+  color: white !important;
+  background-color: rgb(231, 48, 48) !important;
+}
+.btn-danger:hover {
+  color: rgb(231, 48, 48) !important;
+  background-color: white !important;
+ 
+}
