--- a/src/app/shared/components/step-one/step-one.component.html
+++ b/src/app/shared/components/step-one/step-one.component.html
@@ -5,7 +5,7 @@
         <div class="card-body">
           <h3 class="card-title">Get your profile ready in no time!</h3>
           <p class="card-text">
-            Add your resume or LinkedIn URL, and we'll autofill your profile to save you time.
+            Add your CV or resume.
           </p>
           <form (ngSubmit)="goToNextStep()">
             <div class="form-group">
@@ -23,7 +23,7 @@
               CV is required.
             </div>
 
-            <button type="submit" class="btn btn-primary mt-3">Continue</button>
+            <button type="submit" class="btn btn-primary mt-3" >Continue</button>
           </form>
         </div>
       </div>
