--- a/src/app/shared/components/step-two/step-two.component.css
+++ b/src/app/shared/components/step-two/step-two.component.css
@@ -1,7 +1,19 @@
-.container {
+/* .container {
   margin-top: 2rem;
-}
+  background-image: url(./../../../../../public/guide.jpg);
 
+} */
+.container-fluid {
+  background-image: url(./../../../../../public/guide.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  padding: 180px;
+  padding-top: 80px;
+padding-bottom: 40px;
+
+}
 
 .custom-card {
   border-radius: 15px;
@@ -11,9 +23,9 @@
 }
 
 .card-title {
-  color: #007bff;
+  color:  #0b62be;
   font-size: 1.75rem;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .card-text {
@@ -47,4 +59,10 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+.btn-primary{
+  background-color: #0b62be;
+}
+.btn-primary:hover{
+  background-color: #0a4e97;
 }
