--- a/src/app/modules/developer/Components/booking-list/booking-list.component.html
+++ b/src/app/modules/developer/Components/booking-list/booking-list.component.html
@@ -33,7 +33,9 @@
               <div class="card-header border-bottom d-md-flex justify-content-md-between align-items-center">
                 <!-- Icon and Title -->
                 <div class="d-flex align-items-center">
+                 
                   <div class="icon-lg bg-light rounded-circle flex-shrink-0"><i class="bi bi-camera-reels-fill"></i></div>	
+                  
                   <!-- Title -->
                   <div class="ms-2">
                     <h6 class="card-title mb-0">{{ booking.Topic }}</h6>
@@ -52,7 +54,7 @@
     
               <!-- Card body -->
               <div class="card-body">
-                <div class="row g-3">
+                <div class="row g-3 justify-content-between">
                   <div class="col-sm-6 col-md-4">
                     <span class="text-muted">Session Date</span>
                     <h6 class="mb-0 mt-1"> {{ convertToCustomFormat(booking.DateTime) }}</h6>
@@ -66,6 +68,9 @@
                   <div class="col-md-4">
                     <span class="text-muted">The Instructor is</span>
                     <h6 class="mb-0 mt-1">{{ booking.User_FirstName }} {{ booking.User_LastName }}</h6>
+                  </div>
+                  <div class="mt-4 " style="text-align: right;">
+                    <a (click)="UpdateSessionStatus(booking.Id)" class="btn btn-danger mb-0  ">Cancel</a>
                   </div>
                 </div>
               </div>
