--- a/src/app/modules/developer/Components/hr-profile/hr-profile.component.html
+++ b/src/app/modules/developer/Components/hr-profile/hr-profile.component.html
@@ -39,11 +39,11 @@
                           <a [routerLink]="['/developer/booking/',id]" class="btn btn btn-outline-primary">
 
                             <i class="fa-regular fa-handshake"></i>
-                            Book Session
+                            Book Interview
                           </a>
-                          <a [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i
+                          <!-- <a [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i
                               class="fa-solid fa-circle-question"></i> Ask
-                            Questions</a>
+                            Questions</a> -->
                         </div>
                       </div>
                       <div class="d-flex flex-md-row flex-column flex-sm-row custom-flex gap-md-4 gap-2">
@@ -104,7 +104,7 @@
                             <path d="M5.921 11.9 1.353 8.62a.72.72 0 0 1 0-1.238L5.921 4.1A.716.716 0 0 1 7 4.719V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z"></path>
                           </svg> -->
                         </span>
-                        Session Price: $ {{ hrProfile?.Price }}
+                        Interview Price: $ {{ hrProfile?.Price }}
                       </span>
                     </div>
                   </div>
@@ -290,11 +290,11 @@
                           <a [routerLink]="['/developer/booking/',id]" class="btn btn btn-outline-primary">
 
                             <i class="fa-regular fa-handshake"></i>
-                            Book Session
+                            Book Interview 
                           </a>
-                          <a [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i
+                          <!-- <a [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i
                               class="fa-solid fa-circle-question"></i> Ask
-                            Questions</a>
+                            Questions</a> -->
                         </div>
                       </div>
                       <div class="d-flex flex-md-row flex-column flex-sm-row custom-flex gap-md-4 gap-2">
@@ -355,7 +355,7 @@
                             <path d="M5.921 11.9 1.353 8.62a.72.72 0 0 1 0-1.238L5.921 4.1A.716.716 0 0 1 7 4.719V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z"></path>
                           </svg> -->
                         </span>
-                        Session Price: $ {{ hrProfile?.Price }}
+                        Interview Price: $ {{ hrProfile?.Price }}
                       </span>
                     </div>
                   </div>
@@ -757,14 +757,14 @@
                 </div>
                 <div class="d-flex flex-row justify-content-between align-items-center">
                   <div>
-                    <span>Session Price</span>
+                    <span>Interview Price</span>
                     <div class="d-flex flex-row gap-1 align-items-center">
                       <h4 class="mb-1" style="font-size: 25px;">$ {{hr.Price}}</h4>
                     </div>
                   </div>
                   <div>
                     <a [routerLink]="['/developer/booking/',id]" class="btn btn-outline-primary" data-bs-toggle="modal"
-                      data-bs-target="#signupModal">Book Sessions</a>
+                      data-bs-target="#signupModal">Book Interview</a>
                   </div>
                 </div>
               </div>
