--- a/src/app/modules/hr/Components/booking-hr/booking-hr.component.html
+++ b/src/app/modules/hr/Components/booking-hr/booking-hr.component.html
@@ -43,7 +43,7 @@
                   </ul>
                 </div>
               </div>
-  
+             
               <!-- Button -->
               <div class="mt-2 mt-md-0">
                 <a  [routerLink]="['/hr/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
@@ -66,6 +66,9 @@
                 <div class="col-md-4">
                   <span class="text-muted">Booked by</span>
                   <h6 class="mb-0 mt-1">{{ booking?.User_FirstName }} {{ booking?.User_LastName }}</h6>
+                </div>
+                <div class="mt-4 " style="text-align: right;">
+                  <a (click)="UpdateSessionStatus(booking.Id)" class="btn btn-danger mb-0  ">Cancel</a>
                 </div>
               </div>
             </div>
