--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <img class="w-50" src="not-found .png" alt="">
   <div class="error-code"> 404</div>
-  <h1>Page Not Found</h1>
+  <h1 style="padding-top: 20px;">Page Not Found</h1>
   <p>Sorry, the page you are looking for does not exist. you can back to home .</p>
-  <a routerLink="developer/home" class="home-button">Go Back Home</a>
+  <a routerLink="/home" class="home-button">Go Back Home</a>
 </div>
